fixed css grid horizontal overflowing

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -309,6 +309,7 @@ height: 20em;
 
   
 .campaign-page {
+	overflow-x: hidden;
 	text-align: center;
 	font-family: Geneva, Tahoma, Verdana, sans-serif;
 
